static/css/custom.css
body {
  background-color: green;
}
.page-bg {
  background: url('/static/images/bg.jpg');
  -webkit-filter: blur(80px);
  -moz-filter: blur(80px);
  -o-filter: blur(80px);
  -ms-filter: blur(80px);
  filter: blur(80px);
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: -1;
}
.space {
  margin: 0;
  padding: 0;
  height: 20px;
}

